--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
-  "license": "MIT",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
-    "mongoose": "^6.2.10",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
   }
 }
